--- a/css/style.css
+++ b/css/style.css
@@ -103,7 +103,7 @@ body {
 }
 /* header */
 #header {
-  background: url(../images/banner-img-1.png) top/cover no-repeat;
+  background: url(../images/banner-img-1.jpg) top/cover no-repeat;
   color:#e5345b;
 
 }
